--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#">О нас</a></li>
             <li><a href="#">Отзывы</a></li>
             <li><a href="#">Контакты</a></li>
-            <li><a href="#" class="nav__prof"><img src="https://ze40.github.io/focus-user/" alt=""></a></li>
+            <li><a href="https://ze40.github.io/focus-user/" class="nav__prof"><img src="assets/coin-kLO3EMHy.png" alt=""></a></li>
           </ul>
         </nav>
       </div>
